# colonyTracking

./: .gitignore  CHANGELOG.md  DESIGN_DOCUMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: API.md  DEVELOPMENT.md  USAGE.md
src/colonytracking/: __init__.py  config.py
src/colonytracking/analysis/: __init__.py  growth.py  visualization.py
src/colonytracking/data/: __init__.py  structures.py
src/colonytracking/gui/: __init__.py  main.py
src/colonytracking/io/: __init__.py  image.py
src/colonytracking/processing/: __init__.py  core.py  detector.py  tracker.py
tests/: __init__.py  test_core.py
